fix(home page): Align footer style

--- a/frontend/scss/_footer.scss
+++ b/frontend/scss/_footer.scss
@@ -58,6 +58,11 @@ footer {
       .cfa-footer-logo {
         height: 50px;
         margin-bottom: 0;
+        border-right: 1px solid grey;
+      }
+      .footer-captions
+      {
+        font-size: 10px; color: grey;
       }
     }
 
